@@ -4,9 +4,10 @@ DDD News						-*- text -*-
 DDD 2.2.3
 ---------
 
-    DDD 2.2.3 fixes two problems in DDD 2.2.2.
+    DDD 2.2.3 fixes three problems with DDD 2.2.2.
     - `struct' recognition with DBX now works again.  (This one was serious.)
-    - `configure' now checks for the presence of ISO C++ <stdexcept>.
+    - `configure' now checks for correct ISO C++ <stdexcept>.
+    - DDD now runs under the `tvtwm' virtual desktop.
 
 
 DDD 2.2.2
